compiler/w_session/tests/errors/adder.w
fn main(a: u32, b: u32) {
    (a + b);
    (a + 1);
    (1 + b);
    (1 + 1);
}